fixed line align

--- a/src/components/ListingCard/ListingCard.module.css
+++ b/src/components/ListingCard/ListingCard.module.css
@@ -253,7 +253,7 @@
 
 .location {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   /* flex-wrap: wrap; */
   gap: 0px;
   font-family: Mulish;
@@ -292,7 +292,7 @@
 .type {
   font-family: Mulish;
   font-weight: 600;
-  font-size: 10px;
+  font-size: 9px;
   line-height: 130%;
   letter-spacing: 0%;
   text-align: center;
